more or less everything except core transformations (not tested)